Were implemented a front page to visualize the clientes, but there are a lot of problems in back end to resolve.

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -9,3 +9,6 @@ spring:
     username: root
     password: root
     type: com.zaxxer.hikari.HikariDataSource
+  thymeleaf:
+    mode: html
+    cache: false
