--- a/client/pom.xml
+++ b/client/pom.xml
@@ -9,63 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Sistema-de-Cobranca-client</artifactId>
+    <artifactId>client</artifactId>
 
     <properties>
         <jsr305.version>3.0.2</jsr305.version>
     </properties>
-
-    <dependencies>
-        <!-- Test -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-
-        <!-- Documentation -->
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>${swagger-annotations.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-            <version>${jsr305.version}</version>
-        </dependency>
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.openapitools</groupId>
-                <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>${openapi-generator-maven-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <inputSpec>${openapi-spec.file}</inputSpec>
-                            <generatorName>java</generatorName>
-                            <library>resttemplate</library>
-                            <modelPackage>${api.path}.api.model</modelPackage>
-                            <apiPackage>${api.path}.api.facade</apiPackage>
-                            <configOptions>
-                                <async>true</async>
-                                <java8>true</java8>
-                                <serializableModel>true</serializableModel>
-                                <configPackage>${api.path}.api.config</configPackage>
-                                <classpathTargetSpec>${openapi-spec.classpath}</classpathTargetSpec>
-                                <isCorsEnabled>true</isCorsEnabled>
-                                <dateLibrary>java8</dateLibrary>
-                            </configOptions>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
