--- a/pom.xml
+++ b/pom.xml
@@ -33,18 +33,9 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
-
-	<build>
-		<resources>
-			<resource>
-				<directory>${project.basedir}/../service/src/main/resources</directory>
-				<filtering>true</filtering>
-				<includes>
-					<include>api.yml</include>
-				</includes>
-			</resource>
-		</resources>
-	</build>
-
 </project>
