--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/sistemaCobranca
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/sistemaCobranca?createDatabaseIfNotExist=true
     username: root
     password: root
   jpa:
